--- a/templates/getDrinks.ejs
+++ b/templates/getDrinks.ejs
@@ -10,7 +10,7 @@
 <body>
     <h1 id="title">Complete the form below to find drinks!</h1>
     <fieldset>
-        <form action="http://localhost:<%- portnum %>/processDrinks" method="post">
+        <form action="/processDrinks" method="post">
             <label><b>Enter the name of a drink (ex: margarita): </b> <input type="text" id="ingredient" name="ingredient" required></label>
     </fieldset>
 		<br>
