--- a/templates/searchDrinks.ejs
+++ b/templates/searchDrinks.ejs
@@ -10,7 +10,7 @@
 <body>
     <h1 id="title">Complete the form below to filter through your saved drink list!</h1>
     <fieldset>
-        <form action="http://localhost:<%- portnum %>/filteredDrinks" method="post">
+        <form action="/filteredDrinks" method="post">
             <label for="category"><b>Search Saved Drink List by Drink Category:</b></label>
             <select id="category" name="category">
             <option value="Ordinary Drink">Ordinary Drink</option>
