--- a/templates/remove.ejs
+++ b/templates/remove.ejs
@@ -18,7 +18,7 @@
 
 <body>
 	<h1 id="title">Removing All Saved Drinks</h1>
-    <form action="http://localhost:<%- portnum %>/removeConfirmation" method="post" onsubmit= "return checksubmit2()">
+    <form action="/removeConfirmation" method="post" onsubmit= "return checksubmit2()">
 		    <input type="submit" id = "button2" value="Remove all Saved Drinks">
     </form>
 	<hr>
